--- a/src/admin.html
+++ b/src/admin.html
@@ -3,20 +3,109 @@
     <head>
         <meta charset=utf-8>
         <title>管理页面</title>
+        <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
+        <script src="../node_modules/plupload/js/plupload.min.js"></script>
+        <script src="../node_modules/plupload/js/moxie.js"></script>
+        <script src="../node_modules/qiniu-js/dist/qiniu.min.js"></script>
+        <style>
+.uploadArea {
+    width: 200px;
+    height: 100px;
+    border: 1px solid red;
+    border-radius: 5px;
+}
+    .uploadButton {
+        border: 1px solid black;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+        </style>
     </head>
     <body>
-        <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
+        <div id="uploadArea" class="uploadArea">
+            <span id="uploadButton" class="uploadButton">uploadButton</span>
+        </div>
+        <audio id="audio" controls src=""></audio>
+        <span id="uploadStatus"></span>
         <script>
-            console.log(window.AV)
+console.log(window.AV)
 
-            var APP_ID = 'KBmK7cWx4fTfnK5BYWU1xXcv-gzGzoHsz';
+console.log(Qiniu)
+
+
+var uploader = Qiniu.uploader({
+    runtimes: 'html5',      // 上传模式，依次退化
+    browse_button: 'uploadButton',         // 上传选择的点选按钮，必需
+    uptoken_url: 'http://localhost:8888/uptoken',         // Ajax请求uptoken的Url，强烈建议设置（服务端提供）
+    get_new_uptoken: false,             // 设置上传文件的时候是否每次都重新获取新的uptoken
+    domain: 'http://po7b8cjhv.bkt.clouddn.com',     // bucket域名，下载资源时用到，必需
+    container: 'uploadArea',             // 上传区域DOM ID，默认是browser_button的父元素
+    max_file_size: '100mb',             // 最大文件体积限制
+    dragdrop: true,                     // 开启可拖曳上传
+    drop_element: 'uploadArea',          // 拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
+    chunk_size: '4mb',                  // 分块上传时，每块的体积
+    auto_start: true,                   // 选择文件后自动上传，若关闭需要自己绑定事件触发上传
+    //x_vars : {
+    //    查看自定义变量
+    //    'time' : function(up,file) {
+    //        var time = (new Date()).getTime();
+    // do something with 'time'
+    //        return time;
+    //    },
+    //    'size' : function(up,file) {
+    //        var size = file.size;
+    // do something with 'size'
+    //        return size;
+    //    }
+    //},
+    init: {
+        'FilesAdded': function(up, files) {
+            plupload.each(files, function(file) {
+                // 文件添加进队列后，处理相关的事情
+            });
+        },
+        'BeforeUpload': function(up, file) {
+            // 每个文件上传前，处理相关的事情
+        },
+        'UploadProgress': function(up, file) {
+            // 每个文件上传时，处理相关的事情
+            uploadStatus.textContent = "uploading.."
+        },
+        'FileUploaded': function(up, file, info) {
+            // 每个文件上传成功后，处理相关的事情
+            // 其中info.response是文件上传成功后，服务端返回的json，形式如：
+            // {
+            //    "hash": "Fh8xVqod2MQ1mocfI4S4KpRL6D98",
+            //    "key": "gogopher.jpg"
+            //  }
+            // 查看简单反馈
+            var domain = up.getOption('domain');
+            var res = JSON.parse(info.response);
+            var sourceLink = domain +"/"+ encodeURIComponent(res.key); //获取上传成功后的文件的Url
+            uploadStatus.textContent = "upload success" + res.key 
+            console.log(sourceLink)
+            audio.src = sourceLink
+        },
+        'Error': function(up, err, errTip) {
+            //上传出错时，处理相关的事情
+        },
+        'UploadComplete': function() {
+            //队列文件处理完毕后，处理相关的事情
+        },
+    }
+});
+
+/*var APP_ID = 'KBmK7cWx4fTfnK5BYWU1xXcv-gzGzoHsz';
             var APP_KEY = 'u7ERRpg0hyPzYUiKqdol73cf';
 
             AV.init({
                 appId: APP_ID,
                 appKey: APP_KEY
             });
-            
+
 var Playlist = AV.Object.extend('Playlist');
 var Playlist = new Playlist();
 Playlist.save({
@@ -27,7 +116,10 @@ Playlist.save({
     songs: ['1','2','3']
 }).then(function(object) {
     alert('LeanCloud Rocks!');
-})
+})*/
+
+
+
         </script>
     </body>
 </html>
