change main style

--- a/src/admin.html
+++ b/src/admin.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <aside>
-                <div class="newSong">
+                <div class="newSong active">
                     <span>新建歌曲</span>
                 </div>
 
@@ -31,14 +31,21 @@
 
             <main>
             <form class="form">
+                <h1>新建歌曲</h1>
                 <div class="row"> 
-                    歌名 <input type="text">
+                    <span>歌名</span>
+                    <input type="text">
                 </div>
                 <div class="row"> 
-                    歌手 <input type="text">
+                    <span>歌手</span>
+                    <input type="text">
                 </div>
                 <div class="row"> 
-                    歌名 <input type="text">
+                    <span>歌名</span>
+                    <input type="text">
+                </div>
+                <div class="row submit">
+                    <button>submit</button>
                 </div>
             </form>
             </main>
