--- a/src/admin.html
+++ b/src/admin.html
@@ -26,6 +26,7 @@
             <main></main>
         </div>
 
+    <script src='./js/event-hub.js'></script>
     <script src='./js/song-form.js'></script>
     <script src='./js/new-song.js'></script>
     <script src='./js/song-list.js'></script>
@@ -39,64 +40,6 @@ console.log(window.AV)
 console.log(Qiniu)
 
 
-var uploader = Qiniu.uploader({
-    runtimes: 'html5',      // 上传模式，依次退化
-    browse_button: 'uploadButton',         // 上传选择的点选按钮，必需
-    uptoken_url: 'http://localhost:8888/uptoken',         // Ajax请求uptoken的Url，强烈建议设置（服务端提供）
-    get_new_uptoken: false,             // 设置上传文件的时候是否每次都重新获取新的uptoken
-    domain: 'http://po7b8cjhv.bkt.clouddn.com',     // bucket域名，下载资源时用到，必需
-    container: 'uploadArea',             // 上传区域DOM ID，默认是browser_button的父元素
-    max_file_size: '100mb',             // 最大文件体积限制
-    dragdrop: true,                     // 开启可拖曳上传
-    drop_element: 'uploadArea',          // 拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
-    chunk_size: '4mb',                  // 分块上传时，每块的体积
-    auto_start: true,                   // 选择文件后自动上传，若关闭需要自己绑定事件触发上传
-    //x_vars : {
-    //    查看自定义变量
-    //    'time' : function(up,file) {
-    //        var time = (new Date()).getTime();
-    // do something with 'time'
-    //        return time;
-    //    },
-    //    'size' : function(up,file) {
-    //        var size = file.size;
-    // do something with 'size'
-    //        return size;
-    //    }
-    //},
-    init: {
-        'FilesAdded': function(up, files) {
-            plupload.each(files, function(file) {
-                // 文件添加进队列后，处理相关的事情
-            });
-        },
-        'BeforeUpload': function(up, file) {
-            // 每个文件上传前，处理相关的事情
-        },
-        'UploadProgress': function(up, file) {
-            // 每个文件上传时，处理相关的事情
-        },
-        'FileUploaded': function(up, file, info) {
-            // 每个文件上传成功后，处理相关的事情
-            // 其中info.response是文件上传成功后，服务端返回的json，形式如：
-            // {
-            //    "hash": "Fh8xVqod2MQ1mocfI4S4KpRL6D98",
-            //    "key": "gogopher.jpg"
-            //  }
-            // 查看简单反馈
-            var domain = up.getOption('domain');
-            var res = JSON.parse(info.response);
-            var sourceLink = domain +"/"+ encodeURIComponent(res.key); //获取上传成功后的文件的Url
-            console.log(sourceLink)
-        },
-        'Error': function(up, err, errTip) {
-            //上传出错时，处理相关的事情
-        },
-        'UploadComplete': function() {
-            //队列文件处理完毕后，处理相关的事情
-        },
-    }
-});
 
 /*var APP_ID = 'KBmK7cWx4fTfnK5BYWU1xXcv-gzGzoHsz';
             var APP_KEY = 'u7ERRpg0hyPzYUiKqdol73cf';
