create and save song to leanCloud

--- a/src/admin.html
+++ b/src/admin.html
@@ -26,6 +26,7 @@
             <main></main>
         </div>
 
+    <script src='./js/initializers/av.js'></script>
     <script src='./js/event-hub.js'></script>
     <script src='./js/song-form.js'></script>
     <script src='./js/new-song.js'></script>
@@ -33,36 +34,5 @@
     <script src='./js/upload-song.js'></script>
 
 
-
-        <script>
-console.log(window.AV)
-
-console.log(Qiniu)
-
-
-
-/*var APP_ID = 'KBmK7cWx4fTfnK5BYWU1xXcv-gzGzoHsz';
-            var APP_KEY = 'u7ERRpg0hyPzYUiKqdol73cf';
-
-            AV.init({
-                appId: APP_ID,
-                appKey: APP_KEY
-            });
-
-var Playlist = AV.Object.extend('Playlist');
-var Playlist = new Playlist();
-Playlist.save({
-    name: 'test', 
-    cover: 'test',
-    creatorId: 'test',
-    description: 'test',
-    songs: ['1','2','3']
-}).then(function(object) {
-    alert('LeanCloud Rocks!');
-})*/
-
-
-
-        </script>
     </body>
 </html>
