--- a/src/admin.html
+++ b/src/admin.html
@@ -25,14 +25,16 @@
 
             <main></main>
         </div>
+        <div class="site-loading" id="site-loading">
+        </div>
 
     <script src='./js/initializers/av.js'></script>
     <script src='./js/event-hub.js'></script>
-    <script src='./js/song-form.js'></script>
-    <script src='./js/new-song.js'></script>
-    <script src='./js/song-list.js'></script>
-    <script src='./js/upload-song.js'></script>
-
+    <script src='./js/admin/song-form.js'></script>
+    <script src='./js/admin/new-song.js'></script>
+    <script src='./js/admin/song-list.js'></script>
+    <script src='./js/admin/upload-song.js'></script>
+    <script src='./js/admin/loading.js'></script>
 
     </body>
 </html>
