--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,25 @@
-<!>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>My music</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="topBar"> 
+
+            </div> 
+            <div class="music-content">
+                <nav class="navTab" id="navTab"></nav>
+                <div class="tabItem">
+                    <div class="tab-1" id="tab-1">
+                    <div>
+                    <div class="tab-2" id="tab-2">
+                    <div>
+                    <div class="tab-3" id="tab-3">
+                    <div>
+                </div>
+            </div>
+        </div> 
+    </body>
+</html>
