--- a/src/admin.html
+++ b/src/admin.html
@@ -8,6 +8,7 @@
         <script src="../node_modules/plupload/js/moxie.js"></script>
         <script src="../node_modules/qiniu-js/dist/qiniu.min.js"></script>
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+        <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/default.css">
     </head>
     <body>
