--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My music</title>
+        <link rel="stylesheet" href="./css/reset.css">
     </head>
     <body>
         <div class="container">
