finish index topBar

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,26 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,viewport-fit=cover">
         <title>My music</title>
         <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/index.css">
+        <script src="//at.alicdn.com/t/font_1091968_ihhffpuwzgr.js"></script>
     </head>
     <body>
         <div class="container">
             <div class="topBar"> 
-
+                <div class="topBar-content">
+                    <div class="logo">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-logo2"></use>
+                        </svg>
+                        <span>网易云音乐</span>
+                    </div>
+                    <div class="downloadApp">
+                        <span>下载APP</span>
+                    </div>
+                </div>
             </div> 
             <div class="music-content">
                 <nav class="navTab" id="navTab"></nav>
