--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,14 @@
                     </div>
                 </div>
             </div> 
-            <div class="music-content">
-                <nav class="navTab" id="navTab"></nav>
+            <div class="music-container">
+                <nav class="navTab" id="navTab">
+                    <ul class="tab-container">
+                        <li tab=1 class="tab active"><div class="text"><span>推荐音乐</span></li>
+                        <li tab=1 class="tab"><div class="text"><span>热歌榜</span></li>
+                        <li tab=1 class="tab"><div class="text"><span>搜索</span></li>
+                    </ul>
+                </nav>
                 <div class="tabItem">
                     <div class="tab-1" id="tab-1">
                     <div>
