finish song sheet style

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title>My music</title>
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/index.css">
-        <script src="//at.alicdn.com/t/font_1091968_ihhffpuwzgr.js"></script>
+        <script src="//at.alicdn.com/t/font_1091968_a9o1kmvsy7.js"></script>
     </head>
     <body>
         <div class="container">
@@ -32,12 +32,69 @@
                     </ul>
                 </nav>
                 <div class="tabItem">
-                    <div class="tab-1" id="tab-1">
-                    <div>
-                    <div class="tab-2" id="tab-2">
-                    <div>
-                    <div class="tab-3" id="tab-3">
-                    <div>
+                    <div class="tab-1 tab active" id="tab-1">
+                        <div class="songSheet">
+                            <h2 class="tabTitle">推荐歌单</h2> 
+                            <ol class="songSheetList">
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                                <li class="songSheet">
+                                    <div class="img">
+                                        <img src="http://p1.music.126.net/x4aDMWmACLPMsv0qolpOng==/109951163891126165.webp?imageView&thumbnail=123x0&quality=75&tostatic=0&type=webp">
+                                        <p>莫负好时光，带上这些音乐去旅行</p>
+                                    </div>
+                                </li>
+                            </ol>
+                        </div>
+                        <div class="newSongs">
+                            <h2 class="tabTitle">最新音乐</h2> 
+                            <ol class="songList">
+                                <li class="songs"></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ol>
+                            
+                        </div>
+                    </div>
+
+                    <div class="tab-2 tab" id="tab-2">
+                        page 2
+                    </div>
+
+                    <div class="tab-3 tab" id="tab-3">
+                        page 3
+                    </div>
+
                 </div>
             </div>
         </div> 
