--- a/src/index.html
+++ b/src/index.html
@@ -77,11 +77,48 @@
                         <div class="newSongs">
                             <h2 class="tabTitle">最新音乐</h2> 
                             <ol class="songList">
-                                <li class="songs"></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li class="song">
+                                    <h3>那是你离开了北京的生活</h3>
+                                    <p>
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-sq"></use>
+                                        </svg>
+                                        <span class="singer">薛之谦</span>
+                                    </p>
+                                    <a class="playButton">
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-play"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="song">
+                                    <h3>那是你离开了北京的生活</h3>
+                                    <p>
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-sq"></use>
+                                        </svg>
+                                        <span class="singer">薛之谦</span>
+                                    </p>
+                                    <a class="playButton">
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-play"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="song">
+                                    <h3>你还要我怎样</h3>
+                                    <p>
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-sq"></use>
+                                        </svg>
+                                        <span class="singer">薛之谦</span>
+                                    </p>
+                                    <a class="playButton">
+                                        <svg class="icon" aria-hidden="true">
+                                            <use xlink:href="#icon-play"></use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </ol>
                             
                         </div>
