remove body height 100v

--- a/src/index.html
+++ b/src/index.html
@@ -120,8 +120,10 @@
                                     </a>
                                 </li>
                             </ol>
-                            
                         </div>
+                        <footer>
+
+                        </footer>
                     </div>
 
                     <div class="tab-2 tab" id="tab-2">
