--- a/src/play-song.html
+++ b/src/play-song.html
@@ -8,14 +8,29 @@
         <link rel="stylesheet" href="./css/play-song.css">
         <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="//at.alicdn.com/t/font_1091968_a9o1kmvsy7.js"></script>
+        <script src="//at.alicdn.com/t/font_1091968_1e6ehqkfrmlh.js"></script>
         <script src='./js/initializers/av.js'></script>
         <script src='./js/event-hub.js'></script>
     </head>
     <body>
         <div class="container" id="app">
-            play song
-        </div> 
+            <div class="logo">
+                <svg class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-logo4"></use>
+                </svg>
+                <span>网易云音乐</span>
+            </div>
+            <img class="pointer" src="https://s3.music.126.net/m/s/img/needle-ip6.png?be4ebbeb6befadfcae75ce174e7db862">
+
+            <div class="disc-container">
+                <audio clas="song" src="#"></audio>
+                <img class="disc" src="./img/disc.png" />
+                <img class="songImg" src="./img/xiaochou.jpg" />
+                <svg class="icon" aria-hidden="true" id="play">
+                    <use xlink:href="#icon-play"></use>
+                </svg>
+            </div>
+        </div>
         <script src='./js/play/play-song.js'></script>
     </body>
 </html>
