add song backimg

--- a/src/play-song.html
+++ b/src/play-song.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div class="container" id="app">
+            <div class="cover"></div>
             <div class="logo">
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-logo4"></use>
@@ -25,7 +26,7 @@
             <div class="disc-container">
                 <audio clas="song" src="#"></audio>
                 <img class="disc" src="./img/disc.png" />
-                <img class="songImg" src="./img/xiaochou.jpg" />
+                <img class="songImg" src="#" />
                 <svg class="icon" aria-hidden="true" id="play">
                     <use xlink:href="#icon-play"></use>
                 </svg>
