--- a/src/play-song.html
+++ b/src/play-song.html
@@ -23,13 +23,21 @@
             </div>
             <img class="pointer" src="https://s3.music.126.net/m/s/img/needle-ip6.png?be4ebbeb6befadfcae75ce174e7db862">
 
-            <div class="disc-container">
-                <audio clas="song" src="#"></audio>
+            <div class="disc-container playing">
+                <audio autoplay clas="song" src="#"></audio>
                 <img class="disc" src="./img/disc.png" />
                 <img class="songImg" src="#" />
-                <svg class="icon" aria-hidden="true" id="play">
+                <svg class="icon hide" aria-hidden="true" id="play">
                     <use xlink:href="#icon-play"></use>
                 </svg>
+            </div>
+
+            <div class="song-description">
+                <h1 class="songName"></h1>
+                <div class="lyrics">
+                    <div class="lines">
+                    </div>
+                </div>
             </div>
         </div>
         <script src='./js/play/play-song.js'></script>
