finish playlist top page

--- a/src/playlist.html
+++ b/src/playlist.html
@@ -15,12 +15,26 @@
     <body>
         <div class="container" id="app">
             <div class="intro">
-                <div class="img"><img /></div>
+                <div class="img">
+                    <img src="http://p1.music.126.net/7iw_ypWZnet78k7_XRjaHw==/109951163086031971.webp?imageView&thumbnail=60x0&quality=75&tostatic=0&type=webp">
+                </div>
                 <div class="name">
                     <span>缓缓的声音,流进心里的枯井</span>
+                    <div class="author">
+                        <img src="http://p1.music.126.net/7iw_ypWZnet78k7_XRjaHw==/109951163086031971.webp?imageView&thumbnail=60x0&quality=75&tostatic=0&type=webp">
+                        <span>Lashara</span>
+                    </div>
                 </div>
             </div>
             <div class="songList">
+                <div class="tag">
+                    <h2>标签:</h2>
+                    <ol>
+                        <li>散步</li>
+                        <li>感动</li>
+                        <li>华语</li>
+                    </ol>
+                </div>
             </div>
         </div>
         <script src='./js/play/playlist.js'></script>
